--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="model.js"></script>
     <script src="visuals.js"></script>
     <script src="globals.js"></script>
+    <script src="other/scratchpad.js"></script>
   </head>
   <body>
     <h1>p2p WebGPU GPT Model Demo (CrowdGPT)</h1>
