backprop everything. gotta test now

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </p>
 
     <button class="loadModelButton" onclick="loadModel('better_shakespeare', 'char')" disabled>Load Shakespeare Model</button>
+    <button class="loadModelButton" onclick="loadModel('rand', 'char')" disabled>Load Random Model!</button>
     <button class="loadModelButton" onclick="loadModel('gpt2', 'bpe')" disabled>Load GPT2 117M Model</button>
     <button id="destroyCacheButton" onclick="destroyCache()" disabled>Destroy Cache</button>
 
