--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="tokenizer.js"></script>
     <script src="instructions.js"></script>
     <script src="model.js"></script>
+    <script src="train.js"></script>
     <script src="visuals.js"></script>
     <script src="globals.js"></script>
     <script src="other/scratchpad.js"></script>
